- ensure add_existing and delete_existing are removed when list is not nested

= 3.4.37
- return valid css class for subgroups, e.g. when name with dot is used for translation scopes
- check permissions for add existing and delete existing, use nested parent record authorized for update nested association column
- TinyMCE bridge integrate better with the tinymce-rails (thanks to @subfusc)
- Remove own country_select helpers and convert into bridge for country_select gem (now it will save country code instead of country name, migrate data or restore old behaviour setting columns[:col].options[:format] = :old)

= 3.4.36
- Fix tableless for rails >= 4.1 for associations with table
- use number_with_precision for non-integer numbers with i18n_number format, so strip_insignificant_zeros and precision can be used

= 3.4.35
- Fix JS error on update columns when request fails and form is loaded on page
- Not raise exception when trying to scroll to missing element
- Fix error on rails 3.2 caused by a workaround to fix eager load HABTM with scope on rails 4.2

= 3.4.34
- Fix past, future and range on field search with rails 4, local time was used instead of UTC
- Ignore search params when params[:id] is set
- Eager load HABTM with scope using left join
- Add active_scaffold/indicator.gif to precompile so rails 4.2 precompiles it
- Add support for ActiveRecord::Enum so :select form_ui is used by default
- Fix nested link on self-association belongs_to for rails >= 4.1
- Fix update_column for boolean columns with default true on rails 4.2
- Fix columns lost on tableless models on rails 4.2

= 3.4.33
- Fix _base_form when used with actions, so :multipart and :persistent can set to false instead of getting them from action config
- Copy update.columns from create.columns, if not defined
- Ensure ajax:complete is called to enable form after render_form_field request, even if element is removed

= 3.4.32